# proto/gen/api/v1/memo_service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.0
+// - protoc-gen-go-grpc v1.6.1
 // - protoc             (unknown)
 // source: api/v1/memo_service.proto
 
@@ -22,6 +22,7 @@ const _ = grpc.SupportPackageIsVersion9
 const (
 	MemoService_CreateMemo_FullMethodName          = "/memos.api.v1.MemoService/CreateMemo"
 	MemoService_ListMemos_FullMethodName           = "/memos.api.v1.MemoService/ListMemos"
+	MemoService_SearchMemosSemantic_FullMethodName = "/memos.api.v1.MemoService/SearchMemosSemantic"
 	MemoService_GetMemo_FullMethodName             = "/memos.api.v1.MemoService/GetMemo"
 	MemoService_UpdateMemo_FullMethodName          = "/memos.api.v1.MemoService/UpdateMemo"
 	MemoService_DeleteMemo_FullMethodName          = "/memos.api.v1.MemoService/DeleteMemo"
@@ -44,6 +45,8 @@ type MemoServiceClient interface {
 	CreateMemo(ctx context.Context, in *CreateMemoRequest, opts ...grpc.CallOption) (*Memo, error)
 	// ListMemos lists memos with pagination and filter.
 	ListMemos(ctx context.Context, in *ListMemosRequest, opts ...grpc.CallOption) (*ListMemosResponse, error)
+	// SearchMemosSemantic searches memos by semantic similarity.
+	SearchMemosSemantic(ctx context.Context, in *SearchMemosSemanticRequest, opts ...grpc.CallOption) (*ListMemosResponse, error)
 	// GetMemo gets a memo.
 	GetMemo(ctx context.Context, in *GetMemoRequest, opts ...grpc.CallOption) (*Memo, error)
 	// UpdateMemo updates a memo.
@@ -92,6 +95,16 @@ func (c *memoServiceClient) ListMemos(ctx context.Context, in *ListMemosRequest,
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(ListMemosResponse)
 	err := c.cc.Invoke(ctx, MemoService_ListMemos_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *memoServiceClient) SearchMemosSemantic(ctx context.Context, in *SearchMemosSemanticRequest, opts ...grpc.CallOption) (*ListMemosResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListMemosResponse)
+	err := c.cc.Invoke(ctx, MemoService_SearchMemosSemantic_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -226,6 +239,8 @@ type MemoServiceServer interface {
 	CreateMemo(context.Context, *CreateMemoRequest) (*Memo, error)
 	// ListMemos lists memos with pagination and filter.
 	ListMemos(context.Context, *ListMemosRequest) (*ListMemosResponse, error)
+	// SearchMemosSemantic searches memos by semantic similarity.
+	SearchMemosSemantic(context.Context, *SearchMemosSemanticRequest) (*ListMemosResponse, error)
 	// GetMemo gets a memo.
 	GetMemo(context.Context, *GetMemoRequest) (*Memo, error)
 	// UpdateMemo updates a memo.
@@ -265,6 +280,9 @@ func (UnimplementedMemoServiceServer) CreateMemo(context.Context, *CreateMemoReq
 }
 func (UnimplementedMemoServiceServer) ListMemos(context.Context, *ListMemosRequest) (*ListMemosResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method ListMemos not implemented")
+}
+func (UnimplementedMemoServiceServer) SearchMemosSemantic(context.Context, *SearchMemosSemanticRequest) (*ListMemosResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method SearchMemosSemantic not implemented")
 }
 func (UnimplementedMemoServiceServer) GetMemo(context.Context, *GetMemoRequest) (*Memo, error) {
 	return nil, status.Error(codes.Unimplemented, "method GetMemo not implemented")
@@ -355,6 +373,24 @@ func _MemoService_ListMemos_Handler(srv interface{}, ctx context.Context, dec fu
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(MemoServiceServer).ListMemos(ctx, req.(*ListMemosRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _MemoService_SearchMemosSemantic_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SearchMemosSemanticRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MemoServiceServer).SearchMemosSemantic(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MemoService_SearchMemosSemantic_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MemoServiceServer).SearchMemosSemantic(ctx, req.(*SearchMemosSemanticRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -589,6 +625,10 @@ var MemoService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ListMemos",
 			Handler:    _MemoService_ListMemos_Handler,
+		},
+		{
+			MethodName: "SearchMemosSemantic",
+			Handler:    _MemoService_SearchMemosSemantic_Handler,
 		},
 		{
 			MethodName: "GetMemo",
