# server/router/api/v1/acl_config.go
@@ -29,9 +29,10 @@ var PublicMethods = map[string]struct{}{
 	"/memos.api.v1.IdentityProviderService/ListIdentityProviders": {},
 
 	// Memo Service - public memos (visibility filtering done in service layer)
-	"/memos.api.v1.MemoService/GetMemo":          {},
-	"/memos.api.v1.MemoService/ListMemos":        {},
-	"/memos.api.v1.MemoService/ListMemoComments": {},
+	"/memos.api.v1.MemoService/GetMemo":             {},
+	"/memos.api.v1.MemoService/ListMemos":           {},
+	"/memos.api.v1.MemoService/SearchMemosSemantic": {},
+	"/memos.api.v1.MemoService/ListMemoComments":    {},
 }
 
 // IsPublicMethod checks if a procedure path is public (no authentication required).
